--- a/applications/xihe-test-v2/xihe-website/configmap.yaml
+++ b/applications/xihe-test-v2/xihe-website/configmap.yaml
@@ -63,7 +63,7 @@ data:
       }
 
       location ^~ /repo/ {
-        proxy_pass https://gitlab.openeuler.sh/api/v4/ ;
+        proxy_pass https://source-xihe.test.osinfra.cn/api/v4/ ;
       }
 
       location /gitlab-lfs {
