--- a/applications/robot-github-openlookeng/kustomization.yaml
+++ b/applications/robot-github-openlookeng/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - namespace.yaml
 - secrets.yaml
 - synchronizer
+- cla
 commonLabels:
   app: infrastructure-robot-github
 commonAnnotations:
