--- a/applications/robot-github/hook-dispatcher/configmap.yaml
+++ b/applications/robot-github/hook-dispatcher/configmap.yaml
@@ -26,6 +26,9 @@ data:
         openlookeng/community:
         - robot-github-openlookeng-synchronizer
 
+        openlookeng:
+        - robot-github-openlookeng-cla
+
       plugins:
       - name: robot-github-synchronizer
         endpoint: http://service-synchronizer.robot-github.svc.cluster.local:8888/github-hook
@@ -38,6 +41,12 @@ data:
         events:
         - "issues"
         - "issue_comment"        
+
+      - name: robot-github-openlookeng-cla
+        endpoint: http://service-cla.robot-github-openlookeng.svc.cluster.local:8888/github-hook
+        events:
+        - "pull_request"
+        - "issue_comment"
        
       - name: robot-github-openeuler-cla
         endpoint: http://service-cla.robot-github-openeuler.svc.cluster.local:8888/github-hook
