add repo mindspore-portal

--- a/applications/robot-gitee-mindspore/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-mindspore/review-trigger-new/configmap.yaml
@@ -25,6 +25,7 @@ data:
         
     - repos:
       - mindspore/mindinsight
+      - mindspore/mindspore-portal
       need_welcome: true
       cla_label: "mindspore-cla/yes"
       review:
