--- a/applications/robot-gitee-mindspore/tide/configmap.yaml
+++ b/applications/robot-gitee-mindspore/tide/configmap.yaml
@@ -138,6 +138,7 @@ data:
       - mindspore/Xihe-docs
       - mindspore/website-v2
       - mindspore/website-docs
+      - mindspore/mindspore-portal
       labels:
       - label: lgtm
         tips_if_missing: "Please wait for reviewers to review the code."
