--- a/applications/robot-gitee/access/configmap.yaml
+++ b/applications/robot-gitee/access/configmap.yaml
@@ -201,6 +201,9 @@ data:
         mindposre/mindscience:
         - robot-gitee-mindspore-review-trigger-new
         
+        mindspore/mindspore-portal:
+        - robot-gitee-mindspore-review-trigger-new  
+        
         mindspore/course:
         - robot-gitee-mindspore-review-trigger
         
