add repo ascend/ascendspeed

--- a/applications/robot-gitee-ascend/approve/configmap.yaml
+++ b/applications/robot-gitee-ascend/approve/configmap.yaml
@@ -9,6 +9,7 @@ data:
       - ascend
       excluded_repos:
       - ascend/pytorch
+      - ascend/AscendSpeed
       require_self_approval: true      
 
     - repos:
