--- a/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
@@ -15,3 +15,12 @@ data:
         number_of_approvers: 1
         total_number_of_approvers: 2
         total_number_of_reviewers: 1
+        
+    - repos:
+        - ascend/AscendSpeed
+      need_welcome: true
+      cla_label: "ascend-cla/yes"
+      review:
+        number_of_approvers: 1
+        total_number_of_approvers: 1
+        total_number_of_reviewers: 2
