--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -102,6 +102,7 @@ data:
       - ascend/ascend-inference
       - ascend/ascend-faster-transformer
       - ascend/ascend-inference-ptplugin
+      - ascend/AscendSpeed
       labels:
       - label: lgtm
         tips_if_missing: "Please wait for reviewers to review the code."
