--- a/applications/mail/webservice.yaml
+++ b/applications/mail/webservice.yaml
@@ -185,6 +185,16 @@ spec:
                 secretKeyRef:
                   name: mailman-secrets
                   key: xarmor_tenant_id
+            - name: DATA_STORAGE_LOCATION
+              valueFrom:
+                secretKeyRef:
+                  name: mailman-secrets
+                  key: DATA_STORAGE_LOCATION
+            - name: DATA_STORAGE_COMMUNITY
+              valueFrom:
+                secretKeyRef:
+                  name: mailman-secrets
+                  key: DATA_STORAGE_COMMUNITY
           resources:
             requests:
               cpu: 1000m
