--- a/applications/mail/secrets.yaml
+++ b/applications/mail/secrets.yaml
@@ -106,6 +106,12 @@ spec:
     xarmor_tenant_id:
       path: secrets/data/mindspore/rasp_secret
       key: xarmor_tenant_id
+    DATA_STORAGE_LOCATION:
+      path: secrets/data/mindspore/mail_secrets
+      key: DATA_STORAGE_LOCATION
+    DATA_STORAGE_COMMUNITY:
+      path: secrets/data/mindspore/mail_secrets
+      key: DATA_STORAGE_COMMUNITY
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
