--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -12,6 +12,7 @@ data:
       - ascend/tools
       - ascend/community
       - ascend/ais-bench
+      - ascend/Tensorpipe
       labels:
       - label: lgtm
         tips_if_missing: "Please wait for reviewers to review the code."
