--- a/applications/website/console.yaml
+++ b/applications/website/console.yaml
@@ -4,7 +4,6 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-issuer
     nginx.ingress.kubernetes.io/proxy-body-size: 20m
   name: mindspore-console-ingress
   namespace: website
@@ -12,7 +11,7 @@ spec:
   tls:
     - hosts:
         - console.mindspore.cn
-      secretName: console-tls
+      secretName: website-tls
   rules:
     - host: console.mindspore.cn
       http:
@@ -45,7 +44,7 @@ metadata:
   name: mindspore-console
   namespace: website
 spec:
-  replicas: 0
+  replicas: 2
   strategy:
     rollingUpdate:
       maxUnavailable: 1
