--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -257,4 +257,23 @@ spec:
       path: secrets/data/mindspore/xihe-test-v2
       key: GITLAB_INNER_HOST
 
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: xihe-test-osinfra-cn-tls
+  namespace: xihe-test-v2
+spec:
+  name: xihe-test-osinfra-cn-tls
+  keysMap:
+    ca.crt:
+      path: secrets/data/infra-test/domain-tls
+      key: tls.cert
+    tls.crt:
+      path: secrets/data/infra-test/domain-tls
+      key: tls.cert
+    tls.key:
+      path: secrets/data/infra-test/domain-tls
+      key: tls.key
+
 
