--- a/applications/xihe-test-v2/kustomization.yaml
+++ b/applications/xihe-test-v2/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
 - xihe-statistics
 - finetune
 - async-server
+- xihe-forward
 namespace: xihe-test-v2
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
