--- a/applications/xihe-test-v2/xihe-forward/kustomization.yaml
+++ b/applications/xihe-test-v2/xihe-forward/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 commonAnnotations:
   kubernetes.ops.cluster: mindspore-cn4-x86
   kubernetes.ops.email: ''
-  kubernetes.ops.os.base: debian
+  kubernetes.ops.os.base: alpine
   kubernetes.ops.owner: zhouzixian
   kubernetes.ops.region: beijing
 kind: Kustomization
