--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -256,6 +256,9 @@ spec:
     GITLAB_INNER_HOST:
       path: secrets/data/mindspore/xihe-test-v2
       key: GITLAB_INNER_HOST
+    BIGMODEL_WUKONG_USER:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: BIGMODEL_WUKONG_USER
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
