--- a/applications/xihe-test-v2/xihe-server/deployment.yaml
+++ b/applications/xihe-test-v2/xihe-server/deployment.yaml
@@ -343,6 +343,11 @@ spec:
             secretKeyRef:
               key: BIGMODEL_DOMAIN
               name: xihe-secret
+        - name: BIGMODEL_WUKONG_USER
+          valueFrom:
+            secretKeyRef:
+              key: BIGMODEL_WUKONG_USER
+              name: xihe-secret
         - name: ENCRYPTION_KEY_GITLAB_TOKEN
           valueFrom:
             secretKeyRef:
