--- a/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
@@ -24,3 +24,12 @@ data:
         number_of_approvers: 1
         total_number_of_approvers: 1
         total_number_of_reviewers: 2
+
+    - repos:
+        - ascend/ModelLink
+      need_welcome: true
+      cla_label: "ascend-cla/yes"
+      review:
+        number_of_approvers: 1
+        total_number_of_approvers: 3
+        total_number_of_reviewers: 1
