--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -13,6 +13,7 @@ data:
       - ascend/community
       - ascend/ais-bench
       - ascend/Tensorpipe
+      - ascend/ModelLink
       labels:
       - label: lgtm
         tips_if_missing: "Please wait for reviewers to review the code."
