--- a/applications/xihe-new/secret.yaml
+++ b/applications/xihe-new/secret.yaml
@@ -275,4 +275,7 @@ spec:
     GITLAB_INNER_HOST:
       path: secrets/data/mindspore/xihe-new
       key: GITLAB_INNER_HOST
+    BIGMODEL_WUKONG_USER:
+      path: secrets/data/mindspore/xihe-new
+      key: BIGMODEL_WUKONG_USER
 
