--- a/applications/meetingserver/cronjob.yaml
+++ b/applications/meetingserver/cronjob.yaml
@@ -30,6 +30,10 @@ spec:
             env:
             - name: TZ
               value: Asia/Shanghai
+            - name: CONFIG_PATH
+              value: /vault/secrets/secrets.yaml
+            - name: XARMOR_CONF
+              value: /work/app-meeting-server/xarmor_pyrasp.ini
             command:
               - /bin/sh
               - -c
@@ -68,6 +72,10 @@ spec:
             env:
             - name: TZ
               value: Asia/Shanghai
+            - name: CONFIG_PATH
+              value: /vault/secrets/secrets.yaml
+            - name: XARMOR_CONF
+              value: /work/app-meeting-server/xarmor_pyrasp.ini
             command:
               - /bin/sh
               - -c
@@ -106,6 +114,10 @@ spec:
             env:
             - name: TZ
               value: Asia/Shanghai
+            - name: CONFIG_PATH
+              value: /vault/secrets/secrets.yaml
+            - name: XARMOR_CONF
+              value: /work/app-meeting-server/xarmor_pyrasp.ini
             command:
               - /bin/sh
               - -c
