--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -259,6 +259,9 @@ spec:
     BIGMODEL_WUKONG_USER:
       path: secrets/data/mindspore/xihe-test-v2
       key: BIGMODEL_WUKONG_USER
+    BIGMODEL_BAICHUAN:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: BIGMODEL_BAICHUAN
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
