--- a/applications/mindspore-issue-pr-notify-cronjob/kustomization.yaml
+++ b/applications/mindspore-issue-pr-notify-cronjob/kustomization.yaml
@@ -10,3 +10,6 @@ commonAnnotations:
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: mindspore-issue-pr-notify-cronjob
+images:
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/issue-pr-notify
+  newTag: mindspore-c981d7
