--- a/applications/mindspore-issue-pr-notify-cronjob/kustomization.yaml
+++ b/applications/mindspore-issue-pr-notify-cronjob/kustomization.yaml
@@ -12,4 +12,4 @@ kind: Kustomization
 namespace: mindspore-issue-pr-notify-cronjob
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/issue-pr-notify
-  newTag: mindspore-c981d7
+  newTag: mindspore-e016be
