--- a/applications/xihe-new/secret.yaml
+++ b/applications/xihe-new/secret.yaml
@@ -278,4 +278,7 @@ spec:
     BIGMODEL_WUKONG_USER:
       path: secrets/data/mindspore/xihe-new
       key: BIGMODEL_WUKONG_USER
+    BIGMODEL_BAICHUAN:
+      path: secrets/data/mindspore/xihe-new
+      key: BIGMODEL_BAICHUAN
 
