--- a/applications/xihe-new/xihe-server/deployment.yaml
+++ b/applications/xihe-new/xihe-server/deployment.yaml
@@ -343,6 +343,11 @@ spec:
             secretKeyRef:
               key: BIGMODEL_WUKONG_USER
               name: xihe-secret
+        - name: BIGMODEL_BAICHUAN
+          valueFrom:
+            secretKeyRef:
+              key: BIGMODEL_BAICHUAN
+              name: xihe-secret
         - name: KEY_PAIR
           valueFrom:
             secretKeyRef:
