--- a/applications/xihe-new/xihe-server/configmap.yaml
+++ b/applications/xihe-new/xihe-server/configmap.yaml
@@ -126,6 +126,7 @@ data:
         multiple_pictures: "${BIGMODEL_MULTI_PICTURES}"
         ai_detector: "${BIGMODEL_AI_DETECTOR}"
         wukong_user: "${BIGMODEL_WUKONG_USER}"
+        baichuan: "${BIGMODEL_BAICHUAN}"
 
       obs:
         endpoint: "${VQA_OBS_ENDPOINT}"
