--- a/applications/xihe-test-v2/sync-repo/deployment.yaml
+++ b/applications/xihe-test-v2/sync-repo/deployment.yaml
@@ -68,6 +68,21 @@ spec:
             secretKeyRef:
               name: xihe-secret
               key: GITLAB_INNER_HOST
+        - name: REDIS_ADDRESS
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: REDIS_ADDRESS
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: REDIS_PASSWORD
+        - name: KEY_PAIR
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: KEY_PAIR
       volumes:
       - name: app-config
         configMap:
