--- a/applications/xihe-new/sync-repo/kustomization.yaml
+++ b/applications/xihe-new/sync-repo/kustomization.yaml
@@ -11,4 +11,4 @@ nameSuffix: -sync-repo
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-sync-repo
-  newTag: main-bea04c
+  newTag: dev-ac7472
