--- a/applications/source-gitlab/gitlab-secret.yaml
+++ b/applications/source-gitlab/gitlab-secret.yaml
@@ -126,5 +126,44 @@ spec:
       path: secrets/data/mindspore/gitlab
       key: gitlab_shell_custom_hooks_dir
 
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: xihe-mindspore-cn-tls
+  namespace: source
+spec:
+  keysMap:
+    ca.crt:
+      key: ca.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+    tls.crt:
+      key: ca.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+    tls.key:
+      key: ca.key
+      path: secrets/data/mindspore/mindspore-cn-tls
+  name: xihe-mindspore-cn-tls
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: xihe-test-osinfra-cn-tls
+  namespace: source
+spec:
+  keysMap:
+    ca.crt:
+      key: tls.cert
+      path: secrets/data/infra-test/domain-tls
+    tls.crt:
+      key: tls.cert
+      path: secrets/data/infra-test/domain-tls
+    tls.key:
+      key: tls.key
+      path: secrets/data/infra-test/domain-tls
+  name: xihe-test-osinfra-cn-tls
+
+
     
     
