--- a/applications/source-gitlab/gitlab-ingress.yaml
+++ b/applications/source-gitlab/gitlab-ingress.yaml
@@ -3,8 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-issuer
-    nginx.ingress.kubernetes.io/proxy-body-size: "5G"
+    nginx.ingress.kubernetes.io/proxy-body-size: "15G"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -30,7 +29,7 @@ spec:
   tls:
     - hosts:
         - source-xihe.mindspore.cn
-      secretName: gitlab-xihe-tls
+      secretName: xihe-mindspore-cn-tls
   rules:
     - host: source-xihe.mindspore.cn
       http:
