--- a/applications/xihe-new/big-model-finetune/big-model-finetune-secret.yaml
+++ b/applications/xihe-new/big-model-finetune/big-model-finetune-secret.yaml
@@ -8,4 +8,7 @@ spec:
     big_model_finetune_cpu_count:
       key: big_model_finetune_cpu_count
       path: secrets/data/mindspore/xihe-new
+    config_yaml:
+      key: big_model_finetune_config_yaml
+      path: secrets/data/mindspore/xihe-new
   name: big-model-finetune-secret
