--- a/applications/xihe-new/async-server/configmap.yaml
+++ b/applications/xihe-new/async-server/configmap.yaml
@@ -41,6 +41,8 @@ data:
         signle_picture: "${BIGMODEL_SINGLE_PICTURE}"
         multiple_pictures: "${BIGMODEL_MULTI_PICTURES}"
         ai_detector: "${BIGMODEL_AI_DETECTOR}"
+        wukong_user: "${BIGMODEL_WUKONG_USER}"
+        baichuan: "${BIGMODEL_BAICHUAN}"
 
       obs:
         endpoint: "${VQA_OBS_ENDPOINT}"
@@ -72,6 +74,7 @@ data:
 
     mq:
       address: "${KAFKA_ADDRESS}"
+      version: "2.3.0"
       topics:
         fork: "xihe_fork_new"
         like: "xihe_like_new"
@@ -87,6 +90,11 @@ data:
         cloud: "xihe_cloud_new"
         async: "xihe_async_new"
         bigmodel: "xihe_bigmodel_new"
+    redis:
+      db:
+        address: "${REDIS_ADDRESS}"
+        password: "${REDIS_PASSWORD}"
+        key_pair: "${KEY_PAIR}"
 
     watcher:
       time:
