--- a/applications/xihe-new/async-server/deployment.yaml
+++ b/applications/xihe-new/async-server/deployment.yaml
@@ -231,6 +231,21 @@ spec:
             secretKeyRef:
               key: BIGMODEL_AI_DETECTOR
               name: xihe-secret
+        - name: REDIS_ADDRESS
+          valueFrom:
+            secretKeyRef:
+              key: REDIS_ADDRESS
+              name: xihe-secret
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: REDIS_PASSWORD
+              name: xihe-secret
+        - name: KEY_PAIR
+          valueFrom:
+            secretKeyRef:
+              key: KEY_PAIR
+              name: xihe-secret
         resources:
           limits:
             cpu: 1000m
