--- a/applications/xihe-new/internal-server/configmap.yaml
+++ b/applications/xihe-new/internal-server/configmap.yaml
@@ -35,6 +35,8 @@ data:
         course_work: course_work
         course_record: course_record
         cloud_conf: cloud_conf
+        api_apply: api_apply
+        api_info: api_info
 
     domain:
       min_name_length: 3
@@ -42,8 +44,8 @@ data:
       max_desc_length: 200
       max_title_length: 105
       min_title_length: 3
-      min_training_name_length: 1
-      max_training_name_length: 64
+      min_training_name_length: 5
+      max_training_name_length: 50
       max_training_desc_length: 256
       covers:
       - "1"
