--- a/applications/xihe-new/message-server/deployment.yaml
+++ b/applications/xihe-new/message-server/deployment.yaml
@@ -76,6 +76,21 @@ spec:
             secretKeyRef:
               name: xihe-secret
               key: FINETUNE_ENDPOINT
+        - name: REDIS_ADDRESS
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: REDIS_ADDRESS
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: REDIS_PASSWORD
+        - name: KEY_PAIR
+          valueFrom:
+            secretKeyRef:
+              name: xihe-secret
+              key: KEY_PAIR
         resources:
           requests:
             cpu: 1000m
