--- a/applications/mindspore-issue-pr-notify-cronjob/cronjob.yaml
+++ b/applications/mindspore-issue-pr-notify-cronjob/cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: notify-cronjob
   namespace: mindspore-issue-pr-notify-cronjob
 spec:
-  schedule: "6 17 8-14,22-28 * 5"
+  schedule: "6 17 * * 5"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
