--- a/applications/xihe-test-v2/internal-server/configmap.yaml
+++ b/applications/xihe-test-v2/internal-server/configmap.yaml
@@ -37,6 +37,8 @@ data:
         cloud_conf: cloud_conf
         api_apply: api_apply
         api_info: api_info
+        points_task: points_task
+        user_points: user_points
 
     domain:
       min_name_length: 3
