--- a/applications/xihe-test-v2/xihe-server/configmap.yaml
+++ b/applications/xihe-test-v2/xihe-server/configmap.yaml
@@ -259,6 +259,9 @@ data:
         cloud: "xihe_cloud_test"
         async: "xihe_async_test"
         bigmodel: "xihe_bigmodel_test"
+        signin:
+          name: "sign_in"
+          topic: "xihe_sign_in_test"
 
     training:
       job_done_status:
