update mindspore console:master-86c5ce

--- a/applications/website/kustomization.yaml
+++ b/applications/website/kustomization.yaml
@@ -5,6 +5,8 @@ commonAnnotations:
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website
   newTag: v1.0.20230913141828
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/website-backend
+  newTag: master-86c5ce
 kind: Kustomization
 namespace: website
 resources:
