--- a/applications/xihe-test-v2/message-server/configmap.yaml
+++ b/applications/xihe-test-v2/message-server/configmap.yaml
@@ -14,7 +14,7 @@ data:
       collections:
         project: project
         model: model
-        dataset: dataset 
+        dataset: dataset
         user: user
         registration: registration
         login: login
@@ -50,11 +50,11 @@ data:
         pwd: "${PGSQL_PWD}"
         name: "${PGSQL_NAME}"
         port: ${PGSQL_PORT}
-        life: 
+        life:
       table:
         pod: pod
         async_task: async_task
-    
+
     redis:
       address: "${REDIS_ADDRESS}"
       password: "${REDIS_PASSWORD}"
@@ -120,7 +120,7 @@ data:
           - epochs
           - start_learning_rate
           - end_learning_rate
-      
+
       avatar_url:
       - "https://obs-xihe-beijing4.obs.cn-north-4.myhuaweicloud.com/xihe-img/default_avatar/common-3.png"
       - "https://obs-xihe-beijing4.obs.cn-north-4.myhuaweicloud.com/xihe-img/default_avatar/common-2.png"
@@ -147,24 +147,32 @@ data:
     mq:
       address: "${KAFKA_ADDRESS}"
       version: "2.3.0"
-      topics:
-        fork: "xihe_fork_test"
-        like: "xihe_like_test"
-        download: "xihe_download_test"
-        evaluate: "xihe_evaluate_test"
-        training: "xihe_training_test"
-        finetune: "xihe_finetune_test"
-        inference: "xihe_inference_test"
-        following: "xihe_following_test"
-        submission: "xihe_submission_test"
-        operate_log: "xihe_operate_log_test"
-        related_resource: "xihe_related_resource_test"
-        cloud: "xihe_cloud_test"
-        async: "xihe_async_test"
-        bigmodel: "xihe_bigmodel_test"
-        signin:
-          name: "sign_in"
-          topic: "xihe_sign_in_test"
+
+    mq_topics:
+      fork: "xihe_fork_test"
+      like: "xihe_like_test"
+      download: "xihe_download_test"
+      evaluate: "xihe_evaluate_test"
+      training: "xihe_training_test"
+      finetune: "xihe_finetune_test"
+      inference: "xihe_inference_test"
+      following: "xihe_following_test"
+      submission: "xihe_submission_test"
+      operate_log: "xihe_operate_log_test"
+      related_resource: "xihe_related_resource_test"
+      cloud: "xihe_cloud_test"
+      async: "xihe_async_test"
+      bigmodel: "xihe_bigmodel_test"
+      signin:
+        name: "sign_in"
+        topic: "xihe_sign_in_test"
+      competitor_applied: "xihe_competitor_applied_test"
+      inference_start: "xihe_inference_start_test"
+      InferenceError: "xihe_Inference_error_test"
+      inference_async_start: "xihe_inference_async_start_test"
+      inference_async_finish: "xihe_inference_async_finish_test"
+      picture_publicized: "xihe_picture_publicized_test"
+      course_applied: "xihe_course_applied_test"
 
     evaluate:
       endpoint: "${INFERENCE_EVALUATE_ENDPOINT}"
