async server config
Signed-off-by: Li Chaoran <pkwarcraft@gmail.com>

--- a/applications/xihe-test-v2/async-server/configmap.yaml
+++ b/applications/xihe-test-v2/async-server/configmap.yaml
@@ -75,24 +75,25 @@ data:
     mq:
       address: "${KAFKA_ADDRESS}"
       version: "2.3.0"
-      topics:
-        fork: "xihe_fork_test"
-        like: "xihe_like_test"
-        download: "xihe_download_test"
-        evaluate: "xihe_evaluate_test"
-        training: "xihe_training_test"
-        finetune: "xihe_finetune_test"
-        inference: "xihe_inference_test"
-        following: "xihe_following_test"
-        submission: "xihe_submission_test"
-        operate_log: "xihe_operate_log_test"
-        related_resource: "xihe_related_resource_test"
-        cloud: "xihe_cloud_test"
-        async: "xihe_async_test"
-        bigmodel: "xihe_bigmodel_test"
-        signin:
-          name: "sign_in"
-          topic: "xihe_sign_in_test"
+
+    mq_topics:
+      fork: "xihe_fork_test"
+      like: "xihe_like_test"
+      cloud: "xihe_cloud_test"
+      download: "xihe_download_test"
+      evaluate: "xihe_evaluate_test"
+      training: "xihe_training_test"
+      finetune: "xihe_finetune_test"
+      inference: "xihe_inference_test"
+      following: "xihe_following_test"
+      submission: "xihe_submission_test"
+      operate_log: "xihe_operate_log_test"
+      related_resource: "xihe_related_resource_test"
+      async: "xihe_async_test"
+      bigmodel: "xihe_bigmodel_test"
+      signin:
+        name: "sign_in"
+        topic: "xihe_sign_in_test"
 
     redis:
       db:
