add repo transformers

--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -135,6 +135,7 @@ data:
       - ascend/metadef
       - ascend/tensorflow
       - ascend/parser
+      - ascend/transformers
       merge_method: squash
       labels:
       - label: lgtm
