--- a/applications/xihe-test-v2/xihe-server/configmap.yaml
+++ b/applications/xihe-test-v2/xihe-server/configmap.yaml
@@ -47,7 +47,6 @@ data:
         points_task: points_task
         user_points: user_points
 
-
     gitlab:
       endpoint: "${GITLAB_ENDPOINT}"
       graphql_endpoint: "${GITLAB_GRAPHQL_ENDPOINT}"
@@ -159,6 +158,29 @@ data:
         secret_key: "${WUKONG_OBS_SECRET_KEY}"
         bucket: "${WUKONG_OBS_BUCKET}"
 
+      message:
+        inference_start:
+          name: "inference_start"
+          topic: "xihe_inference_start_test"
+        inference_error:
+          name: "inference_error"
+          topic: "xihe_inference_error_test"
+        inference_async_start:
+          name: "inference_async_start"
+          topic: "xihe_inference_async_start_test"
+        inference_async_finish:
+          name: "inference_async_finish"
+          topic: "xihe_inference_async_finish_test"
+        picture_publicized:
+          name: "picture_publicized"
+          topic: "xihe_picture_publicized_test"
+        picture_liked:
+          name: "picture_liked"
+          topic: "xihe_picture_liked_test"
+        bigmodel_access_log:
+          name: "bigmodel_access_log"
+          topic: "xihe_bigmodel_access_log_test"
+
     domain:
       min_name_length: 3
       max_name_length: 35
@@ -259,7 +281,6 @@ data:
       related_resource: "xihe_related_resource_test"
       cloud: "xihe_cloud_test"
       async: "xihe_async_test"
-      bigmodel: "xihe_bigmodel_test"
       signin:
         name: "sign_in"
         topic: "xihe_sign_in_test"
@@ -299,6 +320,11 @@ data:
           name: "competitor_applied"
           topic: "xihe_competitor_applied_test"
 
+    course:
+      message:
+        course_applied:
+          name: "course_applied"
+          topic: "xihe_course_applied_test"
 
     challenge:
       Competition_success_score: 100
