modify topic name
Signed-off-by: Li Chaoran <pkwarcraft@gmail.com>

--- a/applications/xihe-test-v2/xihe-server/configmap.yaml
+++ b/applications/xihe-test-v2/xihe-server/configmap.yaml
@@ -366,7 +366,7 @@ data:
     cloud:
       jupyter_created:
         name: "jupyter_created"
-        topic: "xihe_cloud_test"
+        topic: "xihe_jupyter_created_test"
 
     points:
       domain:
