--- a/applications/website-revision/tls.yaml
+++ b/applications/website-revision/tls.yaml
@@ -1,22 +1,3 @@
-# ---
-# apiVersion: secrets-manager.tuenti.io/v1alpha1
-# kind: SecretDefinition
-# metadata:
-#   name: website-tls
-#   namespace: website-revision
-# spec:
-#   name: website-tls
-#   keysMap:
-#     ca.crt:
-#       path: secrets/data/mindspore/mindspore-cn-tls
-#       key: ca.cert
-#     tls.crt:
-#       path: secrets/data/mindspore/mindspore-cn-tls
-#       key: ca.cert
-#     tls.key:
-#       path: secrets/data/mindspore/mindspore-cn-tls
-#       key: ca.key
-
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
 kind: SecretDefinition
@@ -27,11 +8,11 @@ spec:
   name: website-tls
   keysMap:
     ca.crt:
-      path: secrets/data/infra-test/domain-tls
-      key: tls.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
     tls.crt:
-      path: secrets/data/infra-test/domain-tls
-      key: tls.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
     tls.key:
-      path: secrets/data/infra-test/domain-tls
-      key: tls.key
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.key
