--- a/applications/website-revision/website/deployment.yaml
+++ b/applications/website-revision/website/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - name: huawei-swr-image-pull-secret
       containers:
       - name: websiteinfod
-        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website:master-ea587a
+        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website:master-d3ce2b
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
