--- a/applications/website-revision/website/kustomization.yaml
+++ b/applications/website-revision/website/kustomization.yaml
@@ -11,3 +11,6 @@ commonAnnotations:
   kubernetes.ops.region: beijing
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+images:
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website
+  newTag: master-d8edc1
