--- a/applications/xihe-test-v2/message-server/configmap.yaml
+++ b/applications/xihe-test-v2/message-server/configmap.yaml
@@ -161,9 +161,7 @@ data:
       operate_log: "xihe_operate_log_test"
       related_resource: "xihe_related_resource_test"
       async: "xihe_async_test"
-      signin:
-        name: "sign_in"
-        topic: "xihe_sign_in_test"
+      signin: "xihe_sign_in_test"
       bigmodel_topics:
         inference_start: "xihe_inference_start_test"
         inference_error: "xihe_inference_error_test"
@@ -175,7 +173,12 @@ data:
       jupyter_created: "xihe_jupyter_created_test"
       course_applied: "xihe_course_applied_test"
       training_created: "xihe_training_created_test"
-
+      project_created: "xihe_create_project_test"
+      model_created: "xihe_create_model_test"
+      dataset_created: "xihe_create_dataset_test"
+      project_downloaded: "xihe_download_project"
+      dataset_downloaded: "xihe_download_dataset"
+      model_downloaded: "xihe_download_model"
     evaluate:
       endpoint: "${INFERENCE_EVALUATE_ENDPOINT}"
       survival_time: 10800
