--- a/applications/robot-gitee/sync-repository-server/kustomization.yaml
+++ b/applications/robot-gitee/sync-repository-server/kustomization.yaml
@@ -10,4 +10,4 @@ nameSuffix: -sync-repository-server
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-repository-server
-  newTag: main-402c06
+  newTag: main-f77242c
