--- a/applications/website-revision/website/kustomization.yaml
+++ b/applications/website-revision/website/kustomization.yaml
@@ -13,4 +13,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website
-  newTag: master-0edbc0
+  newTag: master-9ba52c
