--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -262,6 +262,9 @@ spec:
     BIGMODEL_BAICHUAN:
       path: secrets/data/mindspore/xihe-test-v2
       key: BIGMODEL_BAICHUAN
+    BIGMODEL_GLM:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: BIGMODEL_GLM
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
